--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import BarraLateral from '../components/BarraLateral.astro';
 import Navbar from '../components/Navbar.astro';
 import Cont from '../components/Cont.astro';
-import Sidebar from '../components/Sidebar.astro'
-import hot from '../components/hot.astro'
+import Sidebar from '../components/Sidebar.astro';
+import hot from '../components/hot.astro';
+
 ---
 
 <!DOCTYPE html>
