--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BarraLateral from '../components/BarraLateral.astro';
 import Navbar from '../components/Navbar.astro';
 import Cont from '../components/Cont.astro';
 import Sidebar from '../components/Sidebar.astro';
-import hot from '../components/hot.astro';
+import Hotnew from '../components/hotnew.astro';
 
 ---
 
@@ -53,7 +53,7 @@ import hot from '../components/hot.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<hot />
+		<Hotnew />
 		 <Cont />																																																																			 
 	        
 		</div>
