--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Hotnew from '../components/hotnew.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<Hotnew />
+		<Hotnew class="mx-auto bg-Slate-1000" />
 		 <Cont />																																																																			 
 	        
 		</div>
