--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Hotnew from '../components/hotnew.astro';
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
-		  <div id="jua" class="grid grid-columns-1 bg-pink-500 mx-0 overflow-y ">
+		  <div id="jua" class="grid grid-columns-1 bg-pink-500 mx-0 overflow-x ">
 			    
 			        <div class="flex-grow bg-slate-900">
 					    <div class="bg-cover bg-center rounded-lg"
