--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,8 +53,8 @@ import Hotnew from '../components/hotnew.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<Hotnew class="relative mx-auto bg-Slate-900 w-full" />
-		 <Cont class="w-full"/>																																																																			 
+		<Hotnew class="relative mx-auto bg-Slate-900 overflow-x-auto w-full" />
+		 <Cont class="w-full overflow-x-auto"/>																																																																			 
 	        
 		</div>
 		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral /></div>
