--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,11 +53,11 @@ import Hotnew from '../components/hotnew.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<Hotnew class="relative mx-auto bg-Slate-900 overflow-x-auto w-full" />
-		 <Cont class="w-full overflow-x-auto"/>																																																																			 
+		<Hotnew class="relative mx-auto bg-Slate-900 overflow-w-auto w-full" />
+		 <Cont class="w-full overflow-y-auto"/>																																																																			 
 	        
 		</div>
-		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral /></div>
+		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral class="bg-slate-900"/></div>
 	</div>
 	  </div>
 	  </div>
