--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Hotnew from '../components/hotnew.astro';
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar class="w-full" />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
-		  <div id="jua" class=" mt-4 grid grid-columns-1 bg-pink-slate-900 mx-0">
+		  <div id="jua" class=" mt-4 grid grid-columns-1 bg-slate-900 mx-0">
 			    
 			        <div class="flex-grow bg-slate-900 w-full">
 					    <div class="bg-cover bg-center rounded-lg"
@@ -53,8 +53,8 @@ import Hotnew from '../components/hotnew.astro';
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
-		<Hotnew class="relative mx-auto bg-Slate-900 overflow-w-auto w-full" />
-		 <Cont class="w-full overflow-y-auto"/>																																																																			 
+		<Hotnew class="relative mx-auto bg-Slate-900 overflow-auto w-full" />
+		 <Cont class="w-full overflow-auto"/>																																																																			 
 	        
 		</div>
 		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral class="bg-slate-900"/></div>
