--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,10 +54,10 @@ import Hotnew from '../components/hotnew.astro';
 																																																																				         </div>
 																																																																						 </div>
 		<Hotnew class="relative mx-auto bg-Slate-900 overflow-auto w-full" />
-		 <Cont class="w-full overflow-auto"/>																																																																			 
+		 <Cont class=" overflow-x-auto relative"/>																																																																			 
 	        
 		</div>
-		<div id="joa" class="absolute top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral class="bg-slate-900"/></div>
+		<div id="joa" class="top-0 right-0 h-full w-[15%] bg-slate-900"><BarraLateral class="bg-slate-900"/></div>
 	</div>
 	  </div>
 	  </div>
