--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -8,8 +8,8 @@ const movies = [
 ];
 ---
 
-<div class="py-8">
-  <h2 class="text-2xl font-bold text-center mb-6">Hot New</h2>
+<div class="py-8 trxt-white">
+  <h2 class="text-2xl text-white font-bold text-center mb-6">Hot New</h2>
   <div class="overflow-x-auto">
     <div class="flex space-x-4">
       {movies.map(movie => (
