--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Hotnew from '../components/hotnew.astro';
 <body class="min-h-screen bg-slate-900 container mx-auto ml-0">
 
 	<div class="grid grid-cols-[1fr,3fr] gap-4 ">
-		<div id="berro" class=" mx-auto bg-slate-300 container"> <Sidebar class=" mx-auto flex absolute bg-slate-300" /> </div>
+		<div id="berro" class=" mx-auto bg-slate-gray-400 container"> <Sidebar class=" mx-auto flex absolute bg-slate-300" /> </div>
 	<div id="berro2" class="container mx-auto h-screen">
 		<Navbar class="w-full" />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
