--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Hotnew from '../components/hotnew.astro';
 			    
 			        <div class="flex-grow bg-slate-900 w-full">
 					    <div class="bg-cover bg-center rounded-lg"
-						         style="background-image: url('https://img.asmedia.epimg.net/resizer/v2/I4WT6Y6NTROVRMT44WZUUK2WZY.jpg') bg-center bg-cover;"> 
+						         class="bg-[url('https://img.asmedia.epimg.net/resizer/v2/I4WT6Y6NTROVRMT44WZUUK2WZY.jpg')] bg-center bg-cover;"> 
 								   <!-- Tu contenido aquí --> 
 								       <div class="ps-6 bg-slate-900">
 									     <div class="flex gap-2 ">
