--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Hotnew from '../components/hotnew.astro';
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
 		  <div id="jua" class=" mt-4 grid grid-columns-1 bg-slate-900 mx-0">
 			    
-			        <div class="flex-grow bg-slate-900 w-full bg-gradient-to-l from-black opacity-50 to-transparent">
+			        <div class="flex-grow bg-slate-900 w-full bg-gradient-to-l from-black-500 opacity-50 to-transparent">
 					    <div class="bg-cover bg-center rounded-lg bg-[url('https://img.asmedia.epimg.net/resizer/v2/I4WT6Y6NTROVRMT44WZUUK2WZY.jpg?auth=d2cb60ac0b29c21c61ee1c92e09cccc7b2664de4355c5cd0e883d3a11bb0c056&width=1472&height=828&smart=true')] bg-center bg-cover;"> 
 								   <!-- Tu contenido aquí --> 
 								       <div class="ps-6 bg-slate-900">
