--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Hotnew from '../components/hotnew.astro';
 					    <div class="bg-cover bg-center rounded-lg bg-[url('https://img.asmedia.epimg.net/resizer/v2/I4WT6Y6NTROVRMT44WZUUK2WZY.jpg?auth=d2cb60ac0b29c21c61ee1c92e09cccc7b2664de4355c5cd0e883d3a11bb0c056&width=1472&height=828&smart=true')] bg-center bg-cover;"> 
 								   <!-- Tu contenido aquí --> 
 								       <div class="ps-6 bg-slate-900 backdrop-blur">
-									     <div class="flex gap-2 ">
+									     <div class="flex gap-2 backdrop-blur ">
 										             <button class="flex-none flex items-center justify-center w-9 h-12 rounded-md bg-green-400 text-gray-800 border border-slate-200" type="button" aria-label="hover">
 													                 <svg width="20" height="20" fill="currentColor" aria-hidden="true">
 																	                   <path fill-rule="evenodd" clip-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" />
