--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Hotnew from '../components/hotnew.astro';
 																																								       </button>
 																																									   </div>
 																																									   </div>
-																																									       <div class=" backdrop-blur space-y-0 p-6" >
+																																									       <div class="bg-cover backdrop-blur space-y-0 p-6" >
 																																										           <p class="mb-0 text-4xl text-slate-50 font-bold">
 																																												             Spider-Man:
 																																															         </p> 
