--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Hotnew from '../components/hotnew.astro';
 																																										           <p class="mb-0 text-4xl text-slate-50 font-bold">
 																																												             Spider-Man:
 																																															         </p> 
-																																																	         <p class="mb-0 text-4xl text-slate-50 font-bold">
+																																																	         <p class="mb-0 text-4xl text-slate-50 font-bold backdrop-blur">
 																																																			           No Way Home
 																																																					           </p>
 																																																							         </div>
