--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,21 +36,23 @@ import Hotnew from '../components/hotnew.astro';
 																																								       </button>
 																																									   </div>
 																																									   </div>
-																																									       <div class="bg-cover backdrop-blur space-y-0 p-6 w-[40%]" >
+																																									   <div class="backdrop-blur w-[40%]">
+																																									       <div class="bg-cover backdrop-blur space-y-0 p-6" >
 																																										           <p class="mb-0 text-4xl text-slate-50 font-bold">
 																																												             Spider-Man:
 																																															         </p> 
-																																																	         <p class="mb-0 text-4xl text-slate-50 font-bold backdrop-blur">
+																																																	         <p class="mb-0 text-4xl text-slate-50 font-bold">
 																																																			           No Way Home
 																																																					           </p>
 																																																							         </div>
-																																																									         <div class="mb-8 text-pretty text-slate-50 font-bold backdrop-blur w-[40%] ps-6">
+																																																									         <div class="mb-8 text-pretty text-slate-50 font-bold ps-6">
 																																																											           Action, Adventure,fantasy
 																																																													         </div>
 																																																															       <div class="ps-6">
-																																																																             <button type="button" class="backdrop-blur w-[40%]text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-lg text-sm px-14 py-2.5 text-center me-2 mb-2">Watch Now</button>
+																																																																             <button type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-lg text-sm px-14 py-2.5 text-center me-2 mb-2">Watch Now</button>
 																																																																			       </div> 
 																																																																				         </div>
+																																																																						 </div>
 																																																																						 </div>
 		<Hotnew class="absolute mx-auto bg-Slate-900 overflow-x-hidden w-full" />
 		 <Cont class=" overflow-x-auto relative"/>																																																																			 
