--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Hotnew from '../components/hotnew.astro';
 																																																																				         </div>
 																																																																						 </div>
 																																																																						 </div>
-		<Hotnew class="relative bg-Slate-900 overflow-x-hidden" />
+		<Hotnew class="relative bg-Slate-900 w-full" />
 		 <Cont class=" overflow-x-auto relative"/>																																																																			 
 	        
 		</div>
