--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -8,7 +8,7 @@ const movies = [
 ];
 ---
 
-<div class="py-8 trxt-white">
+<div class="py-8 ps-6 trxt-white">
   <h2 class="text-2xl text-white font-bold mb-6">Hot New</h2>
   <div class="overflow-x-auto">
     <div class="flex space-x-4">
