--- a/src/components/Cont.astro
+++ b/src/components/Cont.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<div class="px-4 py-5 flex flex-col gap-6 bg-slate-900">
+<div class="ps-6 py-5 flex flex-col gap-6 bg-slate-900">
   <div class="flex items-center justify-between">
       <h1 class="text-2xl text-bold text-white">Continue Watching</h1>
           <div class="flex gap-4 items-center">
