--- a/src/components/Cont.astro
+++ b/src/components/Cont.astro
@@ -3,7 +3,7 @@
 ---
 <div class="ps-6 py-5 flex flex-col gap-6 bg-slate-900">
   <div class="flex items-center justify-between">
-      <h1 class="text-2xl text-bold text-white">Continue Watching</h1>
+      <h1 class="text-2xl font-bold text-white">Continue Watching</h1>
           <div class="flex gap-4 items-center">
                 <button class="text-zinc-200/50 p-2 border border-zinc-900/50 rounded shadow shadow-zinc-600/50 hover:bg-slate-200 hover:text-slate-900 transition-all duration-200">
                         <svg
