--- a/src/components/BarraLateral.astro
+++ b/src/components/BarraLateral.astro
@@ -7,9 +7,9 @@ const peliculasPopulares = [
       ];
 
       const peliculasRecomendadas = [
-        { title: "Recomendado 1", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.2, category: "Terror", ageRating: "R" },
-          { title: "Recomendado 2", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.6, category: "Aventura", ageRating: "PG" },
-            { title: "Recomendado 3", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.1, category: "Ciencia Ficción", ageRating: "PG-13" },
+        { title: "Avatar", image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg8pAp7zqM7cHgNa4urMYIa5m39ymIa53u6CyOLwYHInm3FFE75z7rhUvGdzzq0P2sdx47yeESaKioRXrXoXCIu6SlzNBNrG8-K277SdfavAiGJFjDaIacUsXU5jbZlWCNXOSoewFLrKws/s1600/Final-Avatar-Poster-8-12-09-kc.jpg", rating: 4.2, category: "Terror", ageRating: "R" },
+          { title: "Random Hearths", image: "https://image.tmdb.org/t/p/original/k7LoKDWDesvYD7DXDh9Ewlxtcx8.jpg", rating: 4.6, category: "Aventura", ageRating: "PG" },
+            { title: "Carrie", image: "https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhqE-7k8LKMFoL_cc17NNLcRo1Dk4IqeYzLlGN7elXYnXaLlfN92ffw6iLYcG19LZARhz3rdxEU7mX5QVvYFywdumqx5MtBXZAkzu3L4JJP9Nmts1UhTEWmB6ZAvVEFpCOnqlqIVYSqjIeI/s1600/Carrie.jpg", rating: 4.1, category: "Ciencia Ficción", ageRating: "PG-13" },
             ];
             ---
 
