--- a/src/components/BarraLateral.astro
+++ b/src/components/BarraLateral.astro
@@ -1,9 +1,9 @@
 ---
 
 const peliculasPopulares = [
-  { title: "Popular1", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.5, category: "Acción", ageRating: "PG-13" },
-    { title: "Popular2", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.0, category: "Comedia", ageRating: "PG" },
-      { title: "Popular 3", image: "https://www.mywalldecorator.com/public/pages/frame-white-100-150.jpeg", rating: 4.8, category: "Drama", ageRating: "R" },
+  { title: "Mea culpa", image: "https://images.justwatch.com/poster/311598725/s718/mea-culpa-2024.jpg", rating: 4.5, category: "Acción", ageRating: "PG-13" },
+    { title: "Bettlejuice 2", image: "https://www.sabor.it/wp-content/uploads/2024/06/90071000002345424_zc_v1_1700573525488_image002.jpg", rating: 4.0, category: "Comedia", ageRating: "PG" },
+      { title: "Sonic 3", image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMCwOY37rUYmzrDbtoqm3bWvk0AqDLXRr2BQ&s", rating: 4.8, category: "Drama", ageRating: "R" },
       ];
 
       const peliculasRecomendadas = [
