--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -1,10 +1,10 @@
 ---
 const movies = [
-  { title: "Movie 1", rating: 4.5, cover: "https://www.millersearles.com/wp-content/uploads/2016/10/100x150-placeholder.jpg" },
-  { title: "Movie 2", rating: 3.8, cover: "https://www.millersearles.com/wp-content/uploads/2016/10/100x150-placeholder.jpg" },
-  { title: "Movie 3", rating: 4.0, cover: "https://www.millersearles.com/wp-content/uploads/2016/10/100x150-placeholder.jpg" },
-  { title: "Movie 4", rating: 5.0, cover: "https://www.millersearles.com/wp-content/uploads/2016/10/100x150-placeholder.jpg" },
-  { title: "Movie 5", rating: 4.2, cover: "https://www.millersearles.com/wp-content/uploads/2016/10/100x150-placeholder.jpg" },
+  { title: "Minecraft", rating: 4.5, cover: "https://m.media-amazon.com/images/M/MV5BYWI2ZWE1NDktYmI1MC00MDAzLWI3MGYtMTgwMjkzNmJjY2ZlXkEyXkFqcGc@._V1_.jpg" },
+  { title: "Super man", rating: 3.8, cover: "https://m.media-amazon.com/images/M/MV5BZjFhZmU5NzUtZTg4Zi00ZjRjLWI0YmQtODk2MzI4YjNhYTdkXkEyXkFqcGc@._V1_.jpg" },
+  { title: "Solo leveling", rating: 4.0, cover: "https://m.media-amazon.com/images/M/MV5BYTIwYzk3YmQtZmMwNS00ZDAwLTk5Y2MtOTEwODFlZmExMzliXkEyXkFqcGc@._V1_.jpg" },
+  { title: "Tron: Ares", rating: 5.0, cover: "https://posterspy.com/wp-content/uploads/2024/02/Second-Teaser-Poster-TRON-ARES.jpg" },
+  { title: "Dogman", rating: 4.2, cover: "https://static.wikia.nocookie.net/universalstudios/images/a/a2/Dog_Man_Teaser_Trailer_Poster.jpg/revision/latest/scale-to-width-down/1895?cb=20240917231739" },
 ];
 ---
 
