--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -4,7 +4,7 @@ const movies = [
   { title: "Super man", rating: 3.8, cover: "https://m.media-amazon.com/images/M/MV5BZjFhZmU5NzUtZTg4Zi00ZjRjLWI0YmQtODk2MzI4YjNhYTdkXkEyXkFqcGc@._V1_.jpg" },
   { title: "Solo leveling", rating: 4.0, cover: "https://m.media-amazon.com/images/M/MV5BYTIwYzk3YmQtZmMwNS00ZDAwLTk5Y2MtOTEwODFlZmExMzliXkEyXkFqcGc@._V1_.jpg" },
   { title: "Tron: Ares", rating: 5.0, cover: "https://posterspy.com/wp-content/uploads/2024/02/Second-Teaser-Poster-TRON-ARES.jpg" },
-  { title: "Dogman", rating: 4.2, cover: "https://static.wikia.nocookie.net/universalstudios/images/a/a2/Dog_Man_Teaser_Trailer_Poster.jpg/revision/latest/scale-to-width-down/1895?cb=20240917231739" },
+  { title: "Dogman", rating: 4.2, cover: "https://www.movieposters.com/cdn/shop/files/dog-man_6sl6ydtx_480x.progressive.jpg?v=1727786655" },
 ];
 ---
 
