--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -1,10 +1,10 @@
 ---
 const movies = [
-  { title: "Minecraft", rating: 4.5, cover: "https://m.media-amazon.com/images/M/MV5BYWI2ZWE1NDktYmI1MC00MDAzLWI3MGYtMTgwMjkzNmJjY2ZlXkEyXkFqcGc@._V1_.jpg" },
+  { title: "Minecraft", rating: 4.5, cover: "https://popcornsg.s3.amazonaws.com/movies/650/3240-72221-AMinecrajpg" },
   { title: "Super man", rating: 3.8, cover: "https://m.media-amazon.com/images/M/MV5BZjFhZmU5NzUtZTg4Zi00ZjRjLWI0YmQtODk2MzI4YjNhYTdkXkEyXkFqcGc@._V1_.jpg" },
   { title: "Solo leveling", rating: 4.0, cover: "https://m.media-amazon.com/images/M/MV5BYTIwYzk3YmQtZmMwNS00ZDAwLTk5Y2MtOTEwODFlZmExMzliXkEyXkFqcGc@._V1_.jpg" },
   { title: "Tron: Ares", rating: 5.0, cover: "https://posterspy.com/wp-content/uploads/2024/02/Second-Teaser-Poster-TRON-ARES.jpg" },
-  { title: "Dogman", rating: 4.2, cover: "https://www.movieposters.com/cdn/shop/files/dog-man_6sl6ydtx_480x.progressive.jpg?v=1727786655" },
+  { title: "Dogman", rating: 4.2, cover: "https://m.media-amazon.com/images/M/MV5BNDQwYWMxMDktZjUwMi00MzE5LTljNTUtZjIzNmNhZTc1ZGJlXkEyXkFqcGc@._V1_.jpg" },
 ];
 ---
 
