--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -4,7 +4,7 @@ const movies = [
   { title: "Super man", rating: 3.8, cover: "https://m.media-amazon.com/images/M/MV5BZjFhZmU5NzUtZTg4Zi00ZjRjLWI0YmQtODk2MzI4YjNhYTdkXkEyXkFqcGc@._V1_.jpg" },
   { title: "Solo leveling", rating: 4.0, cover: "https://m.media-amazon.com/images/M/MV5BYTIwYzk3YmQtZmMwNS00ZDAwLTk5Y2MtOTEwODFlZmExMzliXkEyXkFqcGc@._V1_.jpg" },
   { title: "Tron: Ares", rating: 5.0, cover: "https://posterspy.com/wp-content/uploads/2024/02/Second-Teaser-Poster-TRON-ARES.jpg" },
-  { title: "Dogman", rating: 4.2, cover: "https://m.media-amazon.com/images/M/MV5BNDQwYWMxMDktZjUwMi00MzE5LTljNTUtZjIzNmNhZTc1ZGJlXkEyXkFqcGc@._V1_.jpg" },
+  { title: "Dogman", rating: 4.2, cover: "https://dx35vtwkllhj9.cloudfront.net/universalstudios/dog-man/images/regions/ca/onesheet.jpg" },
 ];
 ---
 
