--- a/src/components/hotnew.astro
+++ b/src/components/hotnew.astro
@@ -19,7 +19,7 @@ const movies = [
             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="currentColor" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09L5.236 12H0l7.618-1.18L10 0l2.382 10.82L20 12h-5.236l1.114 5.09L10 15z"/></svg>
             {movie.rating} / 5
           </div>
-          <h3 class="mt-2 text-center text-lg font-semibold">{movie.title}</h3>
+          <h3 class="mt-2 text-center text-white text-lg font-semibold">{movie.title}</h3>
         </div>
       ))}
     </div>
