--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import Hotnew from '../components/hotnew.astro';
 																																																					           </p>
 																																																							         </div>
 																																																									         <div class="mb-8 text-pretty text-slate-50 font-bold ps-6">
-																																																											           Action, Adventure,fantasy
+																																																											           Acción, Aventura, Fantasía
 																																																													         </div>
 																																																															       <div class="ps-6">
 																																																																             <button type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-lg text-sm px-14 py-2.5 text-center me-2 mb-2">Watch Now</button>
