--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import Hotnew from '../components/hotnew.astro';
 																																																											           Acción, Aventura, Fantasía
 																																																													         </div>
 																																																															       <div class="ps-6">
-																																																																             <button type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-lg text-sm px-14 py-2.5 text-center me-2 mb-2">Watch Now</button>
+																																																																             <button type="button" class="text-white bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-lg text-sm px-14 py-2.5 text-center me-2 mb-2">Ver ahora</button>
 																																																																			       </div> 
 																																																																				         </div>
 																																																																						 </div>
