--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,13 +13,13 @@ import Lupa from "./icons/Lupa.astro";
 
     <div class="w-1/3 flex justify-between items-center">
         
-      <div class="max-w-sm min-w-[150px]">
+      <div class="max-w-md min-w-[150px]">
         <div class="relative flex items-center">
           <Lupa /> 
 
           <input
           class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
-          placeholder="UI Kits, Dashboards..." 
+          placeholder="Buscar películas o series" 
           />
           
           <button
@@ -27,14 +27,14 @@ import Lupa from "./icons/Lupa.astro";
             type="button"
           >
 
-          Search
+          Buscar
 
           </button> 
         </div>
       </div>
 
         <figure class="text-zinc-200 hover:p-2 hover:bg-slate-200 hover:text-slate-900 hover:rounded transition-all duration-200">
-            <Campanadenotificaciones />
+            <Campanadenotificaciones class="mx-2"/>
         </figure>
         <img src="https://s0.smartresize.com/wallpaper/66/387/HD-wallpaper-group-of-users-neon-icon-blue-background-neon-symbols-group-of-users-neon-icons-group-of-users-sign-computer-signs-group-of-users-icon-computer-icons.jpg"
         alt="Imagen de Usuario" class="w-16 h-16 rounded-full">
