--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,7 +15,7 @@ import Lupa from "./icons/Lupa.astro";
         
       <div class="max-w-md min-w-[150px]">
         <div class="relative flex items-center">
-          <Lupa /> 
+          <Lupa class="relative flex" /> 
 
           <input
           class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
