--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,12 +13,12 @@ import Lupa from "./icons/Lupa.astro";
 
     <div class="w-1/3 flex justify-between items-center">
         
-      <div class="max-w-md min-w-[150px]">
+      <div class="max-w-sm min-w-[150px]">
         <div class="relative flex items-center">
-          <Lupa class="relative flex" /> 
+          <Lupa /> 
 
           <input
-          class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
+          class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm flex relative focus:shadow"
           placeholder="Buscar películas o series" 
           />
           
