--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import Lupa from "./icons/Lupa.astro";
 
 ---
 
-<nav class="w-full flex px-4 py-4 justify-between items-center bg-slate-900">
+<nav class="w-full px-4 py-4 justify-between items-center bg-slate-900">
 
     <button class="text-zinc-200/50 border p-1 border-zinc-500/50 rounded shadow shadow-zinc-500/50 hover:bg-slate-200 hover:text-slate-900 transition-all duration-350 ">
         <FlechaAtras />  
