--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import Lupa from "./icons/Lupa.astro";
 
 ---
 
-<nav class="w-full flex px-4 py-4 justify-between items-right bg-slate-900">
+<nav class="w-full flex px-4 py-4 justify-between items-center bg-slate-900">
 
     <button class="text-zinc-200/50 border p-1 border-zinc-500/50 rounded shadow shadow-zinc-500/50 hover:bg-slate-200 hover:text-slate-900 transition-all duration-350 ">
         <FlechaAtras />  
@@ -19,7 +19,7 @@ import Lupa from "./icons/Lupa.astro";
 
           <input
           class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
-          placeholder="Buscar películaso series" 
+          placeholder="UI Kits, Dashboards..." 
           />
           
           <button
@@ -27,14 +27,14 @@ import Lupa from "./icons/Lupa.astro";
             type="button"
           >
 
-          Buscar
+          Search
 
           </button> 
         </div>
       </div>
 
         <figure class="text-zinc-200 hover:p-2 hover:bg-slate-200 hover:text-slate-900 hover:rounded transition-all duration-200">
-            <Campanadenotificaciones class="mx-2"/>
+            <Campanadenotificaciones />
         </figure>
         <img src="https://s0.smartresize.com/wallpaper/66/387/HD-wallpaper-group-of-users-neon-icon-blue-background-neon-symbols-group-of-users-neon-icons-group-of-users-sign-computer-signs-group-of-users-icon-computer-icons.jpg"
         alt="Imagen de Usuario" class="w-16 h-16 rounded-full">
