--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Hotnew from '../components/hotnew.astro';
 	<div class="grid grid-cols-[2fr,3fr] gap-4 ">
 		<div id="berro" class=" h-screen relative mx-auto bg-slate-gray-400 container"> <Sidebar class=" mx-auto flex absolute bg-slate-300" /> </div>
 	<div id="berro2" class="container mx-auto h-screen">
-		<Navbar class="w-full mr-0" />
+		<Navbar class="w-full items-end" />
 		<div class="bg-slate-900 grid grid-cols-[4fr,1fr] w-full relative">
 		  <div id="jua" class=" mt-4 grid grid-columns-1 bg-slate-900 mx-0">
 			    
