--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,7 +11,7 @@ import Lupa from "./icons/Lupa.astro";
         <FlechaAtras />  
     </button>
 
-    <div class="w-1/3 flex justify-between items-center">
+    <div class="w-1/3 flex justify-between items-end">
         
       <div class="max-w-sm min-w-[150px]">
         <div class="relative flex items-center">
