--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,8 +18,8 @@ import Lupa from "./icons/Lupa.astro";
           <Lupa /> 
 
           <input
-          class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-10 pr-3 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
-          placeholder="UI Kits, Dashboards..." 
+          class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-8 pr-3 py-2 mr-4 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
+          placeholder="Buscs películas o series." 
           />
           
           <button
@@ -27,7 +27,7 @@ import Lupa from "./icons/Lupa.astro";
             type="button"
           >
 
-          Search
+          Buscar
 
           </button> 
         </div>
