--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,7 +19,7 @@ import Lupa from "./icons/Lupa.astro";
 
           <input
           class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-500/50 rounded-md pl-8 pr-3 py-2 mr-4 transition duration-300 ease focus:outline-none focus:border-slate-400 focus:text-zinc-200 hover:border-slate-300 shadow-sm focus:shadow"
-          placeholder="Busca películas o series." 
+          placeholder="Busca películas y series." 
           />
           
           <button
