--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BarraLateral from '../components/BarraLateral.astro';
-import Navbar from '../components/Navbar.astro';
+import Navbar from '../components/Nav.astro';
 import Cont from '../components/Cont.astro';
 import Sidebar from '../components/Sidebar.astro';
 import Hotnew from '../components/hotnew.astro';
